pgpvis-core/tests/snapshots/pgpvis_core__render__tests__mpi.snap
---
source: pgpvis-core/src/render.rs
expression: node
---
span:
  offset: 4
  length: 5
  inner: ~
text: MPI
children:
  - span:
      offset: 0
      length: 1
      inner: ~
    text: "Length: 1"
    children: []
  - span:
      offset: 2
      length: 3
      inner: ~
    text: "Integers: [2 octets]"
    children: []
