pgpvis-core/tests/snapshots/pgpvis_core__render__tests__openpgp_ctb.snap
---
source: pgpvis-core/src/render.rs
expression: node
---
span:
  offset: 0
  length: 1
  inner: ~
text: CTB
children:
  - span: ~
    text: "Format: OpenPGP"
    children: []
  - span: ~
    text: "Type ID: 13"
    children: []
