pgpvis-core/tests/snapshots/pgpvis_core__render__tests__openpgp_length_partial.snap
---
source: pgpvis-core/src/render.rs
expression: node
---
span:
  offset: 0
  length: 1
  inner: ~
text: "Length: 512 (Partial)"
children: []
