pgpvis-core/tests/snapshots/pgpvis_core__render__tests__private.snap
---
source: pgpvis-core/src/render.rs
expression: node
---
children:
  - span: ~
    text: Private
    children: []
