pgpvis-core/tests/snapshots/pgpvis_core__render__tests__public_key.snap
---
source: pgpvis-core/src/render.rs
expression: node
---
children:
  - span:
      offset: 0
      length: 1
      inner: ~
    text: "Version: 4"
    children: []
  - span:
      offset: 2
      length: 3
      inner: ~
    text: "Creation Time: 1970-01-01T00:00:00Z (0)"
    children: []
  - span:
      offset: 4
      length: 5
      inner: ~
    text: "Algorithm: Ed25519"
    children: []
  - span:
      offset: 8
      length: 9
      inner: ~
    text: Key Material
    children:
      - span:
          offset: 6
          length: 7
          inner: ~
        text: "[32 octets]"
        children: []
