pgpvis-core/tests/snapshots/pgpvis_core__render__tests__public_version_4_rsa_encrypt_sign.snap
---
source: pgpvis-core/src/render.rs
expression: node
---
children:
  - span:
      offset: 0
      length: 1
      inner: ~
    text: "Version: 4"
    children: []
  - span:
      offset: 2
      length: 3
      inner: ~
    text: "Creation Time: 1970-01-01T00:00:00Z (0)"
    children: []
  - span:
      offset: 4
      length: 5
      inner: ~
    text: "Algorithm: RSA (Encrypt or Sign)"
    children: []
  - span:
      offset: 18
      length: 19
      inner: ~
    text: Key Material
    children:
      - span:
          offset: 10
          length: 11
          inner: ~
        text: n (MPI)
        children:
          - span:
              offset: 6
              length: 7
              inner: ~
            text: "Length: 1"
            children: []
          - span:
              offset: 8
              length: 9
              inner: ~
            text: "Integers: [2 octets]"
            children: []
      - span:
          offset: 16
          length: 17
          inner: ~
        text: e (MPI)
        children:
          - span:
              offset: 12
              length: 13
              inner: ~
            text: "Length: 1"
            children: []
          - span:
              offset: 14
              length: 15
              inner: ~
            text: "Integers: [2 octets]"
            children: []
