pgpvis-core/tests/snapshots/pgpvis_core__render__tests__user_id.snap
---
source: pgpvis-core/src/render.rs
expression: node
---
children:
  - span:
      offset: 0
      length: 1
      inner: ~
    text: "User ID: a"
    children: []
